add swagger API document
